<resources>
    <string name="app_name">Practica2</string>
    <string name="newProduct">Nuevo Producto</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="description">Descripción</string>
    <string name="name">Nombre</string>
    <string name="cost">Costo</string>
    <string name="price">Precio</string>
    <string name="category">Categoria</string>
    <string name="stock">Cantidad de inventario</string>
    <string name="accesory">accesorio</string>
    <string name="cap">Gorra</string>
    <string name="pants">Pantalones</string>
    <string name="shoes">Zapatos</string>
    <string name="socks">Calcetines</string>
    <string name="sweater">Suéter</string>
    <string name="tshirt">Playera</string>
    <string name="product_saved" >Producto guardado</string>
    <string name="Error_not_saved_product">Error on saved product</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="Error_not_deleted_product">Error: No se elimino producto</string>

    <string name="questionDeleteProduct">¿Realmente deseas eliminar el producto? : </string>
    <string name="confirmation">Confirmación</string>
    <string name="acept">aceptar</string>
    <string name="del_product">Producto eliminado</string>
    <string name="h">hil</string>
    <string name="notCategory">Sin categoria</string>
    <string name="priceVsCost">El precio debe ser mayor al costo</string>
    <string name="addElement">Agregrar elemento</string>
    <string name="noEntriesFound">¡No hay registros!</string>
    <string name="profit">Ganancia</string>
    <string name="lastRestocking">Ultimo reabastecimiento:</string>
    <string name="id_Recived">Id recibido:</string>
    <string name="Error">Error</string>
    <string name="server_response">Respuesta del servidor:</string>
    <string name="unavailable_connection">Conexión no disponible</string>
    <string name="tu">tu</string>
    <string name="tienda">Tienda</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="Login">Ingresar</string>
    <string name="sign">Registrarse</string>
    <string name="password_forg">¿Olvidó su contraseña? Restablecer aquí</string>
    <string name="tutienda">© tuTienda</string>
    <string name="no_data">No hay datos para iniciar sesion</string>
    <string name="empty_user">Usuario esta vacio</string>
    <string name="empty_pass">Contraseña vacia</string>
    <string name="alert">Alerta</string>
    <string name="aceptar">Aceptar</string>
    <string name="biometric_active">La aplicación puede autenticar usando biometría</string>
    <string name="not_sensor">El dispositivo no cuenta con lector de huella digital</string>
    <string name="not_sensor_now">El lector de huella no está disponible actualmente</string>
    <string name="user_exists">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="expired_sesion">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="uset_not_exists">Error: No existe el usuario con la información proporcionada.</string>
    <string name="invalid_pass">La contraseña porporcionada es inválida</string>
    <string name="at_least_6_pass">La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="not_network">Red no disponible o se interrumpió la conexión</string>
    <string name="cant_autenticate">Error. No se pudo autenticar exitosamente.</string>
    <string name="not_same_pass">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="successful_auth">Autenticacion exitosa</string>
    <string name="fingerprint_before">Favor de asociar una huella digital al dispositivo primeramente</string>
    <string name="not_user_fingerprint">Ningun usuario activo para ingresar con huella digital</string>
    <string name="sended_email">El correo de verificación ha sido enviado</string>
    <string name="not_send_email">No se pudo enviar el correo de verificación</string>
    <string name="created_user">Usuario creado</string>
    <string name="restore_pass">Restablecer contraseña</string>
    <string name="insert_email">Ingrese su correo para recibir el enlace para restablecer</string>
    <string name="send">Enviar</string>
    <string name="link_sended_email">El enlace para restablecer la contraseña ha sido enviado a su correo</string>
    <string name="cant_send_email">El enlace no se ha podido enviar:</string>
    <string name="pls_email">Favor de ingresar la dirección de correo</string>
    <string name="auth">Autenticación</string>
    <string name="log_fingerprint">Ingrese usando su huella digital</string>
    <string name="cant_auth">No se pudo autenticar</string>
    <string name="error_pass">Se requiere una contraseña o la contraseña no tiene por lo menos 6 caracteres</string>
    <string name="toast_error_email">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="not_valid_pass">Error: La contraseña no es válida</string>
    <string name="imported_from">Importado desde:</string>

</resources>