<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary1"
    tools:context=".ui.fragments.ProductDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:textColor="@color/colorHighlight"
                        android:textSize="25sp"
                        tools:text="@string/name" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:riv_corner_radius="10dp"
                        tools:src="@drawable/cat0" />
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivIconCat"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:riv_corner_radius="10dp"
                        tools:src="@drawable/cat0" />
                    <TextView
                        android:id="@+id/tvLongDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="@string/description" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tvPriceD"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:text="@string/price" />

                        <TextView
                            android:id="@+id/tvCostD"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="end"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:text="@string/cost" />
                        <TextView
                            android:id="@+id/tvProfitD"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="end"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:background="@color/colorPrimary"
                            android:textColor="@color/colorHighlight"
                            android:textSize="20sp"
                            android:text="@string/profit" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/price" />

                        <TextView
                            android:id="@+id/tvCost"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/cost" />
                        <TextView
                            android:id="@+id/tvProfit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:background="@color/colorPrimary"
                            android:textColor="@color/colorHighlight"
                            android:textSize="20sp"
                            tools:text="@string/profit" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tvStockD"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/colorHighlight"
                            android:textSize="20sp"
                            android:text="@string/stock" />

                        <TextView
                            android:id="@+id/tvStock"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:text="@string/stock" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvRestockDateD"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/colorHighlight"
                            android:textSize="20sp"
                            android:text="@string/lastRestocking" />
                        <TextView
                            android:id="@+id/tvRestockDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/lastRestocking" />
                    </LinearLayout>

                    <VideoView
                        android:id="@+id/vvVideo"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/tvImported"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/colorHighlight"
                        android:textSize="20sp"
                        tools:text="@string/imported_from" />
                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="400dp">
                    </fragment>
                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/loading_anim"
                android:indeterminateDuration="1500"
                />


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
