<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSecondary1"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivIcon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:contentDescription="Imagen"
                android:outlineProvider="bounds"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/cat0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="5dp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16"
                tools:text="@string/name" />

            <ImageView
                android:id="@+id/ivIconCat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Imagen"
                android:gravity="end"
                android:scaleType="centerInside"
                android:src="@drawable/cat0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.964"
                app:layout_constraintStart_toEndOf="@id/tvName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.196" />


            <TextView
                android:id="@+id/tvStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toEndOf="@id/ivIcon"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                tools:text="@string/stock" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="end"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvStock"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                tools:text="@string/price" />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
